--- a/gun/plus.html
+++ b/gun/plus.html
@@ -4,7 +4,7 @@
 	  </head>
 	  <body bgcolor="blue">
 	    <font color="red"><center>Назад</center></font><br>
-		<a href="file:///F:/trenerovo4ka/trenerovo4ka))))))).html">
+		<a href="index.html">
 		<center>
 		<font size="+1" color="white">Обратно</font>
 		
